# wired-rocket

./: .gitignore  .yo-rc.json  Cargo.toml  README.md  Rocket.toml  package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/ts/: index.ts
frontend/ts/controllers/: reset_form_controller.ts
migrations/2021-01-26-044635_create_rooms/: down.sql  up.sql
migrations/2021-01-26-142032_create_messages/: down.sql  up.sql
src/: main.rs  schema.rs  web_socket_server.rs
src/models/: message.rs  mod.rs  room.rs
src/routes/: rooms.rs
templates/messages/: message.html.hbs
templates/rooms/: edit.html.hbs  index.html.hbs  new.html.hbs
