[package]
name = "wired-rocket"
version = "0.1.0"
authors = ["Takafumi Hirata <takhirata6@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = "1.4.5"
rocket = "0.4.5"
rocket-multipart-form-data = "0.9.6"
rocket_contrib = { version = "0.4.5", features = ["templates", "handlebars_templates", "databases", "diesel", "diesel_mysql_pool"] }
serde = { version = "1.0.123", features = ["derive"] }
tungstenite = "0.12.0"
